--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "eslint-plugin-import": "^2.25.4",
     "husky": "^7.0.0",
     "jest": "^27.4.7"
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.3"
   }
 }
