--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --verbose",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "nodemon public/js/index.js"
   },
   "jest": {
     "testEnvironment": "jsdom"
@@ -41,6 +42,7 @@
     "jest": "^27.4.7"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "nodemon": "^2.0.15"
   }
 }
